# Kaleidoscope

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.sh  a.txt  test.cpp  test_fibonacii.sh  test_for.ll  test_for.txt  test_if.ll  test_if.txt  test_llvm.cpp  test_mandelbrot_set.ll  test_mandelbrot_set.sh  test_mandelbrot_set.txt  test_var_declar_assign.ll
include/: Kaleidoscope.h  KaleidoscopeJIT.h  global.h  util.h
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  ast.h  codegen.cpp  global.cpp  global.h  lexer.cpp  parser.cpp  util.cpp  util.h
test/: CMakeLists.txt  lexer_test.cpp  test_for.ll  test_for.sh  test_for.txt  test_if.ll  test_if.sh  test_if.txt  test_mandelbrot_set.ll  test_mandelbrot_set.sh  test_mandelbrot_set.txt  test_var_declar_assign.ll  test_var_declar_assign.sh  test_var_declar_assign.txt
